test/semantic_error/se_rv_fc.c0
int f() {int a; a = if();}
